
* #12278, #:12325: Remove the OCAML_FLEXLINK environment variable from the
  compiler drivers. This environment variable was previously used as part of the
  FlexDLL bootstrap procedure and existed solely for that purpose. Its removal
  greatly simplifies both the build system and testsuite machinery.
  (David Allsopp, review by Sébastien Hinderer)

### Internal/compiler-libs changes:

- #12216, #12248: Prevent reordering of atomic loads during instruction
  scheduling.  This is for reference, as instruction scheduling is currently
  unused in OCaml 5.
  (Xavier Leroy, report by Luc Maranget and KC Sivaramakrishnan,
   review by Nicolás Ojeda Bär)

- #12025: Split Typecore.unify_pat_types into two
  to avoid unnecessary references to the environment in type_pat
  (Jacques Garrigue and Takafumi Saikawa, review by Gabriel Scherer)

- #12031: Use dedicated types to represent names of compilation units
  and predefined exceptions in CMO files.
  (Sébastien Hinderer, review by Florian Angeletti, Thomas Refis,
  Gabriel Scherer, Vincent Laviron, Pierre Chambart, Luke Maurer,
  Hugo Heuzard, Xavier Leroy and Damien Doligez)

- #12109: Pack parameters to unification in unification_environment
  (Takafumi Saikawa and Jacques Garrigue, review by Richard Eisenberg)

### Build system:

- #12198: continue the merge of the sub-makefiles into the root Makefile
  started with #11243, #11248, #11268, #11420 and #11675.
  (Sébastien Hinderer, review by David Allsopp and Florian Angeletti)

### Bug fixes:

- #12037: get_extern_state potential NULL dereference.
  (Alexander Skvortsov, report by Török Edwin,
   design by Gabriel Scherer, Xavier Leroy)

* #12145: Loopy constraints cause ocamlc to loop.
  Fixed by completely removing the call to `update_type` in
  `Typedecl.transl_type_decl`, as the expansion is already checked by
  `check_regularity`. As a result, recursion is more polymorphic,
  which may cause some (essentialy wrong) type declarations to have